WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208812
Creating paths that are single-segment bezier or quad curves should not require a CGPath allocation
https://bugs.webkit.org/show_bug.cgi?id=208812
Summary
Creating paths that are single-segment bezier or quad curves should not requi...
Wenson Hsieh
Reported
2020-03-09 08:09:49 PDT
Fold simple bezier and quad curves into inline path data as well.
Attachments
Patch
(14.44 KB, patch)
2020-03-09 08:41 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-03-09 08:41:16 PDT
Created
attachment 393037
[details]
Patch
WebKit Commit Bot
Comment 2
2020-03-09 12:55:59 PDT
Comment on
attachment 393037
[details]
Patch Clearing flags on attachment: 393037 Committed
r258151
: <
https://trac.webkit.org/changeset/258151
>
WebKit Commit Bot
Comment 3
2020-03-09 12:56:00 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-03-09 12:56:21 PDT
<
rdar://problem/60238005
>
Darin Adler
Comment 5
2020-03-09 13:57:52 PDT
Comment on
attachment 393037
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393037&action=review
> Source/WebCore/platform/graphics/Path.cpp:273 > + if (hasInlineData<LineData>() || hasInlineData<BezierCurveData>() || hasInlineData<QuadCurveData>())
Eventually we will get to the point where a single switchOn is more efficient than these multiple calls.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug