Creating paths that are single-segment bezier or quad curves should not require a CGPath allocation https://bugs.webkit.org/show_bug.cgi?id=208812

Reviewed by Tim Horton.

Extend the inline path data mechanism introduced in r258118 to encompass two more cases of simple path objects:
single-segment quad and bezier curves. In these scenarios, we can simply store the start point, end point, and
one or two control points (respectively). See below for more details; there should be no change in behavior.

* platform/graphics/InlinePathData.h:

Add the new inline path data types to the variant. Note that does not increase the size of the InlinePathData
variant, nor does it increase the size of Path, since the variant is already 32 bytes large due to ArcData.

(WebCore::QuadCurveData::encode const):
(WebCore::QuadCurveData::decode):
(WebCore::BezierCurveData::encode const):
(WebCore::BezierCurveData::decode):

Add encoders and decoders for QuadCurveData and BezierCurveData.

* platform/graphics/Path.cpp:
(WebCore::Path::apply const):

In the cases where we have quad and bezier curves, we can apply the path without having to fall back to
allocating a platform path object.

(WebCore::Path::currentPoint const):

Return endPoint in both of the new inline curve cases.

(WebCore::Path::elementCount const):

Return 2 in both of the new cases.

(WebCore::Path::addQuadCurveTo):
(WebCore::Path::addBezierCurveTo):

If the path is null (we haven't modified anything yet) or the path was only moved to some location, stuff
information about the quad or bezier curve into inline data on Path and avoid creating a CGPath on CoreGraphics
platforms (and other types of platform paths elsewhere).

* platform/graphics/Path.h:
* platform/graphics/cairo/PathCairo.cpp:
(WebCore::Path::addQuadCurveToSlowCase):
(WebCore::Path::addBezierCurveToSlowCase):
(WebCore::Path::addQuadCurveTo): Deleted.
(WebCore::Path::addBezierCurveTo): Deleted.
* platform/graphics/cg/PathCG.cpp:
(WebCore::Path::createCGPath const):
(WebCore::Path::addQuadCurveToSlowCase):
(WebCore::Path::addBezierCurveToSlowCase):

Add -SlowCase suffixes to these methods, and move the main implementation of addQuadCurve and addBezierCurve
into platform-agnostic code in Path.cpp where we update the inline path data and bail early if appropriate, and
otherwise fall back to addQuadCurveToSlowCase or addBezierCurveToSlowCase.

(WebCore::Path::addQuadCurveTo): Deleted.
(WebCore::Path::addBezierCurveTo): Deleted.
* platform/graphics/win/PathDirect2D.cpp:
(WebCore::Path::addQuadCurveToSlowCase):
(WebCore::Path::addBezierCurveToSlowCase):
(WebCore::Path::addQuadCurveTo): Deleted.
(WebCore::Path::addBezierCurveTo): Deleted.


Canonical link: https://commits.webkit.org/221754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258151 268f45cc-cd09-0410-ab3c-d52691b4dbfc